## Process this file with automake to produce Makefile.in

htmldir = $(prefix)/@PACKAGE@/html

# Windows files
BCPP_FILES = \
borland/Makefile

# Microsoft Visual C++
VCPP_FILES = \
vcpp/adie/adie.vcproj \
vcpp/bitmapviewer/bitmapviewer.vcproj \
vcpp/button/button.vcproj \
vcpp/calculator/calculator.vcproj \
vcpp/chart/chart.vcproj \
vcpp/datatarget/datatarget.vcproj \
vcpp/dctest/dctest.vcproj \
vcpp/dialog/dialog.vcproj \
vcpp/dirlist/dirlist.vcproj \
vcpp/expression/expression.vcproj \
vcpp/format/format.vcproj \
vcpp/foursplit/foursplit.vcproj \
vcpp/fox/fox.vcproj \
vcpp/foxdll/foxdll.vcproj \
vcpp/gltest/gltest.vcproj \
vcpp/glviewer/glviewer.vcproj \
vcpp/groupbox/groupbox.vcproj \
vcpp/header/header.vcproj \
vcpp/hello/hello.vcproj \
vcpp/hello2/hello2.vcproj \
vcpp/iconlist/iconlist.vcproj \
vcpp/image/image.vcproj \
vcpp/imageviewer/imageviewer.vcproj \
vcpp/layout/layout.vcproj \
vcpp/mditest/mditest.vcproj \
vcpp/memmap/memmap.vcproj \
vcpp/minheritance/minheritance.vcproj \
vcpp/pathfinder/pathfinder.vcproj \
vcpp/ratio/ratio.vcproj \
vcpp/reswrap/reswrap.vcproj \
vcpp/scribble/scribble.vcproj \
vcpp/shutter/shutter.vcproj \
vcpp/shutterbug/shutterbug.vcproj \
vcpp/splitter/splitter.vcproj \
vcpp/switcher/switcher.vcproj \
vcpp/tabbook/tabbook.vcproj \
vcpp/table/table.vcproj \
vcpp/wizard/wizard.vcproj \
vcpp/win32.sln


# Digital Mars C++
DMC_FILES = \
dmc/Makefile

# Open Watcom C++
WATCOM_FILES = \
watcom/Makefile


EXTRA_DIST = $(BCPP_FILES) $(VCPP_FILES) $(DMC_FILES) $(WATCOM_FILES)


























